# open-loot

./: .gitignore  pyproject.toml
tutorial/: data.json
tutorial/tutorial/spiders/: example.py
